tests/snapshots/cli_happy__enum_with_data_variants.snap
---
source: tests/cli_happy.rs
expression: stdout
---
enum groxide_test_api::Shape

pub enum Shape

An enum with data-carrying variants.

Variants:
  Circle(f64)                                                 A circle with a radius.
  Point                                                       A point with no data.
  Rectangle { width: f64, height: f64 }                       A rectangle with width and height.

Trait Implementations: (showing 5 of 7, use --impls to expand)
  impl Freeze
  impl RefUnwindSafe
  impl Send
  impl Sync
  impl Unpin
