tests/snapshots/cli_happy__impls_bare_flag.snap
---
source: tests/cli_happy.rs
expression: stdout
---
struct groxide_test_api::containers::Stack

pub struct Stack<T>

trait implementations:
  impl Default
  impl Freeze (synthetic)
  impl RefUnwindSafe (synthetic)
  impl Send (synthetic)
  impl Sync (synthetic)
  impl Unpin (synthetic)
  impl UnsafeUnpin (synthetic)
  impl UnwindSafe (synthetic)
