tests/snapshots/cli_happy__impls_filter_default.snap
---
source: tests/cli_happy.rs
expression: stdout
---
struct groxide_test_api::containers::Stack

pub struct Stack<T>

Trait Implementations:
  impl Default
